[package]
name = "multiruntime-streams"
version = "0.0.1"
edition = "2024"

[features]
default = ["tokio", "global-spawners"]
tokio = ["dep:tokio", "dep:tokio-stream", "dep:futures-core", "dep:futures-util"]
global-spawners = ["tokio", "dep:once_cell", "dep:num_cpus", "tokio/rt-multi-thread", "tokio/io-util", "tokio/net", "tokio/time"]
local = ["tokio"]
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1.49", features = ["rt", "sync", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
once_cell = { version = "1.21", optional = true }
num_cpus = { version = "1.17", optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["rt", "sync", "macros", "rt-multi-thread", "time", "io-util", "net", "fs"] }
tokio-stream = "0.1"
tempfile = "3.24"
